[package]
name = "apigpio"
description = "pigpio bindings - safe, async, Rust pigpiod client library"

#  Copyright (C) 2020 Ian Jackson
#
#  This program is free software: you can redistribute it and/or modify
#  it under the terms of the GNU Affero General Public License as published by
#  the Free Software Foundation, either version 3 of the License, or
#  (at your option) any later version.
#
#  This program is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU Affero General Public License for more details.
#
#  You should have received a copy of the GNU Affero General Public License
#  along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
# Individual files generally contain the following tag in the copyright
# notice, instead of the full licence grant text:
#   SPDX-License-Identifier: AGPL-3.0-or-later
# As is conventional, this should be read as a licence grant.
#
# Contributions are accepted based on the git commit Signed-off-by
# convention, by which the contributors' certify their contributions
# according to the Developer Certificate of Origin version 1.1 - see
# the file DEVELOPER-CERTIFICATE.

authors = ["Ian Jackson <ijackson@chiark.greenend.org.uk>",
           "pigpio contributors http://abyz.me.uk/rpi/pigpio/"]
license = "AGPL-3.0-or-later"

version = "0.1.0"
edition = "2018"

[dependencies]
thiserror = "1"
arrayref = "0.3"
num-traits = "0.2"
num-derive = "0.3"
strum = "0.18"
strum_macros = "0.18"
tokio = { version = "0.2", features = ["macros","net","io-util","sync"] }
slotmap = "0.4"
futures-util = "0.3"
